2007-05-08  Roman Kennke  <roman@kennke.org>

	* gnu/java/awt/peer/x/XFontPeer.java: Removed.
	* gnu/java/awt/peer/x/XGraphics.java: Removed
	* gnu/java/awt/peer/x/XFontPeer2.java
	(XLineMetrics.getDescent): Use cached idendity transform.
	(XFontMetrics.cachedPoint): New field. Caches a Point2D instance
	for reuse.
	(XFontMetrics.getAscent): Use cached idendity transform.
	(XFontMetrics.getDescent): Use cached idendity transform.
	(XFontMetrics.getHeight): Use cached idendity transform.
	(XFontMetrics.charWidth): Map character to glyph index first.
	(XFontMetrics.stringWidth): Use cached idendity transform.
	(IDENDITY): New static field. A reused AffineTransform instance.

2007-05-08  Roman Kennke  <roman@kennke.org>

	* gnu/java/awt/font/FontDelegate.java
	(getGlyphIndex): New method. Maps characters to their
	glyph index in the font.
	M gnu/java/awt/font/opentype/OpenTypeFont.java
	(getGlyphIndex): New method. Maps characters to their
	glyph index in the font.

2007-05-08  Roman Kennke  <roman@kennke.org>

	* gnu/java/awt/java2d/AbstractGraphics2D.java
	(AA_SAMPLING): Removed.
	(alpha): Removed field.
	(edgeTable): Removed field.
	(fillScanlineAA): Removed obsolete method.
	(drawPolyline): Implemented by using a GeneralPath.
	(drawPolygon): Reset the cached polygon.
	(fillPolygon): Reset the cached polygon.
	(fillShape): Default to antialias on for text.
	(rawDrawLine): Use ShapeCache.
	(rawDrawRect): Use ShapeCache.
	(rawFillRect): Use ShapeCache.
	(fillScanlineAA): New method for antialiased rendering.	
	* gnu/java/awt/java2d/ScanlineConverter.java
	(scanlinesPerPixel): New field.
	(minX,maxX): New fields.
	(scanlineYCov,scanlineXCov): New fields.
	(slPix0): New field.
	(alphaRes): New field.
	(renderShape): Add antialiasing functionality.
	(doScanline): Add antialiasing functionality.
	(setResolution): Add antialiasing functionality.
	(addShape): Determine span in X direction.
	(fit): Fix thinko.
	* gnu/java/awt/java2d/ShapeCache.java